--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -28,6 +29,8 @@
      <ul>
        <li>CSS acts as a style sheet for your webpage</li>
        <li> CSS is the visual aspect to your website</li>
+       <li>A margin indicates how much space we want around the outside of an element.</li>
+       <li>A padding indicates how much space we want around the content inside an element.</li>
      </ul>
    </section>
 
